# JellyPlayer

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  main.qml  windowmanager.cpp  windowmanager.h
patches/: fix-mingw-windows.patch
